load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "user-service_lib",
    srcs = [
        "database.go",
        "handler.go",
        "main.go",
        "repository.go",
    ],
    importpath = "github.com/knightdave/shippy/user-service",
    visibility = ["//visibility:private"],
    deps = [
        "//user-service/proto/user",
        "@com_github_jinzhu_gorm//:go_default_library",
        "@com_github_jinzhu_gorm//dialects/postgres:go_default_library",
        "@com_github_micro_go_micro//:go_default_library",
    ],
)

go_binary(
    name = "user-service",
    embed = [":user-service_lib"],
    visibility = ["//visibility:public"],
)
