load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "user_proto",
    srcs = ["user.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "user_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/knightdave/shippy/user-service/proto/user",
    proto = ":user_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "user",
    srcs = ["extensions.go"],
    embed = [":user_go_proto"],
    importpath = "github.com/knightdave/shippy/user-service/proto/user",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_jinzhu_gorm//:go_default_library",
        "@com_github_satori_go_uuid//:go_default_library",
    ],
)
