load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "vessel_proto",
    srcs = ["vessel.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "vessel_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/knightdave/shippy/vessel-service/proto/vessel",
    proto = ":vessel_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "vessel",
    embed = [":vessel_go_proto"],
    importpath = "github.com/knightdave/shippy/vessel-service/proto/vessel",
    visibility = ["//visibility:public"],
)
